light mode letter visibility fixed

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -46,3 +46,6 @@
   padding: 2rem 0;
   width: 100%;
 }
+.hero__subtitle code {
+  color: black;
+}
